assets/css/style.css
html, body {
    max-width: 100%;
    overflow-x: hidden;
}

header {
	display: flex;
	flex: 0 0 auto;
	justify-content: space-between;
	background-color: rgb(40, 40, 40);
}

h1 {
	font-family: "Poppins", sans-serif;
	font-weight: bold;
	color: rgb(40, 40, 40);
	background-color: lightskyblue;
	padding: 7px 15px 0 30px;
	margin: 10px 0;
	border-radius: 0 0.25rem 0.25rem 0;
}

.space-img {
	background-image: url("../images/space.png");
	height: 200px;
}

.main-project {
	background-image: url("../images/temp\ img.jpg");
    height: 500px;
    border: solid 4px steelblue;
}

.small-project{
    background-image: url("../images/temp\ img.jpg");
    height: 200px;
    border: solid 4px steelblue;
}

.subtitle-div {
	position: relative;
	background-repeat: no-repeat;
	background-position: center right;
	width: auto;
}

.subtitle {
	font-family: "Poppins", sans-serif;
	font-weight: bold;
	color: rgb(40, 40, 40);
	background-color: lightskyblue;
	padding: 0 15px 0 10px;
	bottom: 15px;
	right: 15px;
	position: absolute;
	border-radius: 0.25rem 0 0 0.25rem;
}

.btn-nav {
	color: rgb(40, 40, 40);
	font-weight: bold;
	background-color: lightskyblue;
	border-color: lightskyblue;
	margin: 10px;
}

article {
	justify-content: center;
	align-items: center;
	padding: 20px 0;
	color: steelblue;
}

article h2 {
	font-family: "Poppins", sans-serif;
	font-weight: bold;
}

.content {
	color: steelblue;
	border-style: solid;
	border-width: 0 0 0 4px;
}

